gcc/testsuite/rust/rustc/ui/keyword/extern/keyword-extern-as-identifier-use.rs
use extern::foo; // { dg-error ".E0432." "" { target *-*-* } }
// { dg-error ".E0432." "" { target *-*-* } .-2 }

fn main() {}

